--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,18 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+
 }
 
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
 
+
     defaultConfig {
         applicationId "com.steingolditay.app.matrixapp"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -31,36 +34,70 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     def lifecycle_version = "2.3.0"
+    def room_version = "2.2.6"
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
 
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
 
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
+    implementation "androidx.room:room-ktx:$room_version"
 
+
+    // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
+    // Architecture
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
 
+    // Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
+
+    // Hilt
+    implementation 'com.google.dagger:hilt-android:2.33-beta'
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+//    annotationProcessor 'com.google.dagger:hilt-compiler:2.33-beta'
+
+    // Local Unit Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "com.google.truth:truth:1.1.2"
+
+    // Instrumented Unit Testing
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "com.google.truth:truth:1.1.2"
+
+    // Klaxon
+    implementation 'com.beust:klaxon:5.5'
 
 
 }
