--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-
-
+    // OKHttp
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
@@ -59,7 +58,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
     implementation "androidx.room:room-ktx:$room_version"
-
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
@@ -84,8 +82,6 @@ dependencies {
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.33-beta'
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-
-//    annotationProcessor 'com.google.dagger:hilt-compiler:2.33-beta'
 
     // Local Unit Testing
     testImplementation 'junit:junit:4.13.2'
