--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,22 +42,16 @@ android {
 
 dependencies {
     def lifecycle_version = "2.3.0"
-    def room_version = "2.2.6"
 
+    // Basic
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    // OKHttp
-    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
-    implementation("com.squareup.okhttp3:okhttp")
-    implementation("com.squareup.okhttp3:logging-interceptor")
-
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
-    implementation "androidx.room:room-ktx:$room_version"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
@@ -71,12 +65,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
-    // Room
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // GlideToVector
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
     // Hilt
@@ -91,9 +80,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "com.google.truth:truth:1.1.2"
-
-    // Klaxon
-    implementation 'com.beust:klaxon:5.5'
 
 
 }
